--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,12 +39,26 @@ general-button:focus{
     outline: none;
 }
 
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.home-page-box-container{
+    height: 350px;
+}
+
+.other-box-container{
+    height: 660px;
+}
+
 .box-container {
     position: absolute;
     justify-content: center;
     top: 25%;
     width: 1300px;
-    height: 660px;
     outline: 5px solid black;
     box-shadow: 15px 15px rgba(1, 1, 1, 0.8);
     border-radius: 25px;
@@ -55,7 +69,7 @@ general-button:focus{
     font-size: 50px;
     width: 600px;
     height: 300px;
-    margin-top: 15px;
+    margin-top: 25px;
     margin-left: 20px;
     margin-bottom: 10px;
     margin-right: 20px;
@@ -72,7 +86,7 @@ general-button:focus{
     opacity: 0.9;
     width: 595px;
     height: 295px;
-    margin-top: 17.5px;
+    margin-top: 27.5px;
     margin-left: 22.5px;
     margin-bottom: 12.5px;
 }
@@ -80,7 +94,7 @@ general-button:focus{
 .home-page-button:active {
     width: 590px;
     height: 290px;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 25px;
     margin-bottom: 15px;
 }
@@ -176,10 +190,40 @@ general-button:focus{
 }
 
 .login-box {
-    width: 600px;
-    height: 900px;
+    position: absolute;
+    justify-content: center;
+    width: 500px;
+    height: 300px;
     border-radius: 10px;
-    box-shadow: 5px 5px black;
+    box-shadow: 10px 10px black;
+    outline: 5px solid black;
+    background-color: white;
+}
+
+.login-input {
+    width: 450px;
+    height: 40px;
+    margin-left: 25px;
+    margin-top: 20px;
+    border-radius: 25px;
+    outline: 2px solid black;
+    box-shadow: 4px 4px rgba(1, 1, 1, 0.8);
+
+}
+
+.login-close-button {
+    float: right;
+    margin-right: 5px;
+    margin-top: -45px;
+    color: red;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.login-button{
+    position: absolute;
+    bottom: 10px;
+    right:0;
 }
 
 #navbar-search-form {
