--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Clicker</a>
+                <a class="navbar-brand" href="Home/Index">Clicker</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" href="/Home/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Play">Play</a>
+                            <a class="nav-link text-dark" href="/Play/Index">Play</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Leaderboard">Leaderboard</a>
+                            <a class="nav-link text-dark" href="/Leaderboard/Index">Leaderboard</a>
                         </li>
                     </ul>
                     <form class="form-group input-group" id="navbar-search-form">
@@ -46,7 +46,7 @@
 
     <footer class="border-top footer text-muted">
         <div style="font-family: sans-serif;" class="container">
-            &copy; 2023 - ClickerWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - Clicker - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
