Finished leaderboard visuals and sorting

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Clicker!</h1>
-    <div class="box-container home-page-box-container">
+    <div class="box-container">
         <a style="float:left;" class="home-page-button general-button" href="Play/Index">Play</a>
-        <a style="float:right;" class="home-page-button general-button" href="/Leaderboard/Index">Leaderboard</a>
+        <a style="float:right;" class="home-page-button general-button" href="/Leaderboard/Index/time=0&page=0">Leaderboard</a>
     </div>
 </div>
