Implemented Identity with default styling

--- a/Views/Leaderboard/Index.cshtml
+++ b/Views/Leaderboard/Index.cshtml
@@ -67,7 +67,7 @@
                     {
                         <tr>
                             <td>@position</td>
-                            <td>@item.name</td>
+                            <td>@item.user</td>
                             <td>@Math.Round(item.clicksPerMinute)</td>
                             <td>@item.clicks</td>
                             <td>@item.time</td>
