--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,5 +7,7 @@
     <div class="box-container">
         <a style="float:left;" class="home-page-button general-button" href="Play/Index">Play</a>
         <a style="float:right;" class="home-page-button general-button" href="/Leaderboard/Index/time=0&page=0">Leaderboard</a>
+        <a style="float:left;" class="home-page-button general-button" href="/Users/Index">Users</a>
+        <a style="float:right;" class="home-page-button general-button" onclick="login();">Login</a>
     </div>
 </div>
