--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -66,7 +66,7 @@ h1{
     font-size: 50px;
     width: 600px;
     height: 300px;
-    margin-top: 25px;
+    margin-top: 15px;
     margin-left: 20px;
     margin-bottom: 10px;
     margin-right: 20px;
@@ -83,7 +83,7 @@ h1{
     opacity: 0.9;
     width: 595px;
     height: 295px;
-    margin-top: 27.5px;
+    margin-top: 17.5px;
     margin-left: 22.5px;
     margin-bottom: 12.5px;
 }
@@ -91,7 +91,7 @@ h1{
 .home-page-button:active {
     width: 590px;
     height: 290px;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 25px;
     margin-bottom: 15px;
 }
@@ -229,6 +229,8 @@ h1{
 .login-box {
     position: absolute;
     justify-content: center;
+    margin-left: 1025px;
+    margin-top: 300px;
     width: 500px;
     height: 300px;
     border-radius: 10px;
@@ -251,16 +253,26 @@ h1{
 .login-close-button {
     float: right;
     margin-right: 5px;
-    margin-top: -45px;
-    color: red;
-    background-color: white;
+    margin-top: -40px;
+    background-color: red;
     border-radius: 10px;
+    box-shadow: 2px 2px black;
 }
 
 .login-button{
     position: absolute;
     bottom: 10px;
-    right:0;
+    right: 10px;
+    border-radius: 15px;
+    box-shadow: 3px 3px black;
+}
+
+.new-account-button {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    border-radius: 15px;
+    box-shadow: 3px 3px black;
 }
 
 #navbar-search-form {
