--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@{
     ViewData["Title"] = "Home page";
 }
 
@@ -8,6 +11,13 @@
         <a style="float:left;" class="home-page-button general-button" href="Play/Index">Play</a>
         <a style="float:right;" class="home-page-button general-button" href="/Leaderboard/Index/time=0&page=0">Leaderboard</a>
         <a style="float:left;" class="home-page-button general-button" href="/Users/Index">Users</a>
-        <a style="float:right;" class="home-page-button general-button" onclick="login();">Login</a>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <a style="float:right;" class="home-page-button general-button" onclick="login();">Account</a> 
+        }
+        else
+        {
+            <a style="float:right;" class="home-page-button general-button" onclick="login();">Login</a>
+        }
     </div>
 </div>
