--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -240,14 +240,19 @@ h1{
 }
 
 .login-input {
-    width: 450px;
-    height: 40px;
-    margin-left: 25px;
-    margin-top: 20px;
+    width: 600px;
+    height: 45px;
+    margin-bottom: 10px;
     border-radius: 25px;
     outline: 2px solid black;
     box-shadow: 4px 4px rgba(1, 1, 1, 0.8);
+    font-family: sans-serif;
+}
 
+.login-label {
+    margin-top: 10px;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .login-close-button {
@@ -260,11 +265,12 @@ h1{
 }
 
 .login-button{
+    font-size: 35px;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
-    border-radius: 15px;
-    box-shadow: 3px 3px black;
+    bottom: 30px;
+    right: 30px;
+    border-radius: 20px;
+    box-shadow: 5px 5px black;
 }
 
 .new-account-button {
