--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -145,8 +145,8 @@ h1{
 .results-box {
     position: relative;
     justify-content: center;
-    display: none;
     margin-left: 325px;
+    margin-top: 100px;
     width: 650px;
     height: 330px;
     outline: 3px solid black;
