Finished user page and leaderboard ranking code

--- a/Views/Leaderboard/Index.cshtml
+++ b/Views/Leaderboard/Index.cshtml
@@ -76,7 +76,7 @@
                     {
                         <tr>
                             <td>@position</td>
-                            <td>@item.Username</td>
+                            <td><a href="/Users/User?username=@item.Username">@item.Username</a></td>
                             <td>@Math.Round(item.clicksPerMinute)</td>
                             <td>@item.clicks</td>
                             <td>@item.time</td>
