--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
                                 <a class="nav-link text-dark" href="/Leaderboard/Index/time=0&page=0">Leaderboard</a>
                             </li>
                         </ul>
-                        <form class="form-group input-group mx-auto" id="navbar-search-form">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        <form class="form-group input-group mx-auto" method="GET" action="/Users/User" id="navbar-search-form">
+                            <input class="form-control" style="font-family:sans-serif;" type="search" placeholder="Search User" aria-label="Search" name="username">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
@@ -48,7 +48,7 @@
 
         <footer class="border-top footer text-muted">
             <div style="font-family: sans-serif;" class="container">
-                &copy; 2023 - Clicker - <a href="/Home/Privacy">Privacy</a>
+                &copy; 2023 - Clicker - <a href="https://github.com/Tommo9182">Tommo9182</a>
             </div>
         </footer>
     </div>
